# hello-world-gtk

./: README.md  hello-world-gtk.c  hello-world-gtk.spec  hello.desktop  meson.build
